src/objects/SalesHist__c.object
<CustomObject>
    <fields>
        <fullName>AccessAddr__c</fullName>
        <label>場所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessDate__c</fullName>
        <label>訪問日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccessTime__c</fullName>
        <label>訪問時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>キャンペーン</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013/10/初旬発送DM（忘年会のお知らせ）</fullName>
                </value>
                <value>
                    <fullName>2013/10/12発行招待券（レストラン割引30%OFF）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>完了予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Companion__c</fullName>
        <label>同行者</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>なし</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <label>団体名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSourceBridal__c</fullName>
        <label>リードソース(ブライダル)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>資料請求</fullName>
                </value>
                <value>
                    <fullName>見学予約</fullName>
                </value>
                <value>
                    <fullName>来館</fullName>
                </value>
                <value>
                    <fullName>再来館</fullName>
                </value>
                <value>
                    <fullName>追客</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>リードソース</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>広告</fullName>
                </value>
                <value>
                    <fullName>紹介(従業員)</fullName>
                </value>
                <value>
                    <fullName>紹介(外部)</fullName>
                </value>
                <value>
                    <fullName>パートナー</fullName>
                </value>
                <value>
                    <fullName>広報活動</fullName>
                </value>
                <value>
                    <fullName>セミナー</fullName>
                </value>
                <value>
                    <fullName>外部セミナー</fullName>
                </value>
                <value>
                    <fullName>展示会</fullName>
                </value>
                <value>
                    <fullName>口コミ</fullName>
                </value>
                <value>
                    <fullName>固定客</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LostReason__c</fullName>
        <label>ロスト理由</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Memo2__c</fullName>
        <label>内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Memo3__c</fullName>
        <label>その他</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>営業経緯</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NextStep__c</fullName>
        <label>次のステップ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>確度(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SalesAccountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>営業記録</relationshipLabel>
        <relationshipName>SalesAccountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesContactRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お客様</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>営業記録</relationshipLabel>
        <relationshipName>SalesContactRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesDivision__c</fullName>
        <label>営業区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>忘年会</fullName>
                </value>
                <value>
                    <fullName>新年会</fullName>
                </value>
                <value>
                    <fullName>法事</fullName>
                </value>
                <value>
                    <fullName>パーティー</fullName>
                </value>
                <value>
                    <fullName>接待</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesExpectation__c</fullName>
        <label>売上見込</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesLogNmae__c</fullName>
        <label>営業記録名</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>フェーズ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>コンタクト</fullName>
                </value>
                <value>
                    <fullName>評価</fullName>
                </value>
                <value>
                    <fullName>ニーズの評価</fullName>
                </value>
                <value>
                    <fullName>提案</fullName>
                </value>
                <value>
                    <fullName>予算/決定者の確認</fullName>
                </value>
                <value>
                    <fullName>価格交渉</fullName>
                </value>
                <value>
                    <fullName>提案書/見積書の作成</fullName>
                </value>
                <value>
                    <fullName>最終交渉</fullName>
                </value>
                <value>
                    <fullName>商談成立</fullName>
                </value>
                <value>
                    <fullName>ロスト</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SummaryCost__c</fullName>
        <label>累計コスト</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>既存ビジネス</fullName>
                </value>
                <value>
                    <fullName>新規ビジネス</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>営業記録</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>SalesLogNmae__c</columns>
        <columns>SalesAccountRef__c</columns>
        <columns>SalesContactRef__c</columns>
        <columns>Type__c</columns>
        <columns>LeadSource__c</columns>
        <columns>StageName__c</columns>
        <columns>SalesDivision__c</columns>
        <columns>Campaign__c</columns>
        <columns>Probability__c</columns>
        <columns>SalesExpectation__c</columns>
        <columns>CloseDate__c</columns>
        <columns>Memo__c</columns>
        <columns>NextStep__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>営業記録No</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>BridalRecType</fullName>
        <active>true</active>
        <label>ブライダル</label>
    </recordTypes>
    <recordTypes>
        <fullName>CompanyRecType</fullName>
        <active>true</active>
        <label>法人</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>